viewport and mobile readability fixes

--- a/css/master.css
+++ b/css/master.css
@@ -7,6 +7,7 @@ body {
   position: relative;
   width: 100% !important;
   background-color: #000 !important;
+  padding: 0 !important;
 }
 .image {
   display: block;
@@ -60,7 +61,9 @@ p {
   display: block;
   margin: auto;
   width: 100%;
-  padding-top:2em;
+  -ms-transform: translate(0, -3em); /* IE 9 */
+  -webkit-transform: translate(0, -3em); /* Safari */
+  transform: translate(0, -3em);
 }
 .dropcap {
   color: tomato;
@@ -82,7 +85,24 @@ p {
 @media screen and (max-device-width: 640px) {
     p {
         width: 100% !important;
-        font-size: 3em;
-        padding: 0 1em 0 1em;
+        font-size: x-large;
+        padding: 1em;
+      }
+    h1 {
+        font-size: 2.5em !important;
+    }
+    .container {
+      min-height: 100% !important;
+      position: fixed;
+       top: 0;
+       left: 0;
+       bottom: 0;
+       right: 0;
+       overflow: auto;
+    }
+    .story {
+      -ms-transform: translate(0, 0em); /* IE 9 */
+      -webkit-transform: translate(0, 0em); /* Safari */
+      transform: translate(0, 0em);
     }
 }
